// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataClassDesigner custom properties 1`] = `
<div>
  <div
    class="domain-designer"
  >
    <div
      class="panel panel-default domain-form-panel lk-border-theme-light"
    >
      <div
        class="domain-panel-header domain-heading-collapsible domain-panel-header-expanded labkey-page-nav"
        id="dataclass-properties-hdr"
      >
        <span
          class="domain-panel-title"
        >
          Source Properties
        </span>
        <span
          class="pull-right"
        >
          <span
            class="fa fa-lg fa-chevron-down domain-form-collapse-btn"
          />
        </span>
      </div>
      <div
        class="collapse panel-collapse in"
      >
        <div
          class="panel-body"
        >
          <div
            class="row margin-bottom"
          >
            <div
              class="col-xs-9"
            >
              <div
                class="entity-form--headerhelp"
              >
                header text test
              </div>
            </div>
            <div
              class="col-xs-3"
            >
              <div
                class="row"
              >
                <div
                  class="col-xs-12"
                >
                  <a
                    class="domain-field-float-right"
                    href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createDataClass"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Learn more about designing sources
                  </a>
                </div>
              </div>
            </div>
          </div>
          <form>
            <div
              class="row margin-bottom margin-top"
            >
              <div
                class="col-xs-2"
              >
                <span
                  class="domain-no-wrap"
                >
                  Name
                   *
                </span>
              </div>
              <div
                class="col-xs-10"
              >
                <input
                  class="form-control"
                  id="entity-name"
                  placeholder="Enter a name for this source"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="row margin-bottom"
            >
              <div
                class="col-xs-2"
              >
                <span
                  class="domain-no-wrap"
                >
                  Description
                  <div
                    class="overlay-trigger"
                  >
                    <span
                      class="label-help-target"
                    >
                      <span
                        class="label-help-icon fa fa-question-circle"
                      />
                    </span>
                  </div>
                </span>
              </div>
              <div
                class="col-xs-10"
              >
                <textarea
                  class="form-control"
                  id="entity-description"
                />
              </div>
            </div>
            <div
              class="row margin-bottom"
            >
              <div
                class="col-xs-2"
              >
                <div
                  class="name-expression-label-div"
                >
                  Naming 
                  <span
                    class="domain-no-wrap"
                  >
                    Pattern
                    <div
                      class="overlay-trigger"
                    >
                      <span
                        class="label-help-target"
                      >
                        <span
                          class="label-help-icon fa fa-question-circle"
                        />
                      </span>
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="col-xs-10"
              >
                <input
                  class="form-control"
                  id="entity-nameExpression"
                  placeholder="name expression placeholder test"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
    <div
      class="panel panel-default domain-form-panel"
    >
      <div
        class="domain-panel-header domain-heading-collapsible domain-panel-header-collapsed"
        id="domain-header"
      >
        <div
          class="overlay-trigger"
        >
          <span
            class="label-help-target"
          >
            <span
              class="domain-panel-status-icon domain-panel-status-icon-blue"
            >
              <span
                class="fa fa-exclamation-circle"
              />
            </span>
          </span>
        </div>
        <span
          class="domain-panel-title"
        >
          Fields
        </span>
        <span
          class="pull-right"
        >
          <span
            class="fa fa-lg fa-chevron-right domain-form-expand-btn"
          />
        </span>
      </div>
      <div
        class="collapse panel-collapse"
      >
        <div
          class="panel-body domain-field-top-noBuffer"
        >
          <span
            class=""
          >
            <i
              aria-hidden="true"
              class="fa fa-spinner fa-pulse"
            />
             
            Loading...
          </span>
        </div>
      </div>
    </div>
    <div
      class="form-buttons"
    >
      <div
        class="form-buttons__left"
      >
        <button
          class="cancel-button btn btn-default"
          type="button"
        >
          Cancel
        </button>
      </div>
      <div
        class="form-buttons__right"
      >
        <button
          class="save-button btn btn-primary"
          type="button"
        >
          Finish it up
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataClassDesigner default properties 1`] = `
<div>
  <div
    class="domain-designer"
  >
    <div
      class="panel panel-default domain-form-panel lk-border-theme-light"
    >
      <div
        class="domain-panel-header domain-heading-collapsible domain-panel-header-expanded labkey-page-nav"
        id="dataclass-properties-hdr"
      >
        <span
          class="domain-panel-title"
        >
          Data Class Properties
        </span>
        <span
          class="pull-right"
        >
          <span
            class="fa fa-lg fa-chevron-down domain-form-collapse-btn"
          />
        </span>
      </div>
      <div
        class="collapse panel-collapse in"
      >
        <div
          class="panel-body"
        >
          <div
            class="row margin-bottom"
          >
            <div
              class="col-xs-12"
            >
              <div
                class="row"
              >
                <div
                  class="col-xs-12"
                >
                  <a
                    class="domain-field-float-right"
                    href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createDataClass"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Learn more about designing data classes
                  </a>
                </div>
              </div>
            </div>
          </div>
          <form>
            <div
              class="row margin-bottom margin-top"
            >
              <div
                class="col-xs-2"
              >
                <span
                  class="domain-no-wrap"
                >
                  Name
                   *
                </span>
              </div>
              <div
                class="col-xs-10"
              >
                <input
                  class="form-control"
                  id="entity-name"
                  placeholder="Enter a name for this data class"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="row margin-bottom"
            >
              <div
                class="col-xs-2"
              >
                <span
                  class="domain-no-wrap"
                >
                  Description
                  <div
                    class="overlay-trigger"
                  >
                    <span
                      class="label-help-target"
                    >
                      <span
                        class="label-help-icon fa fa-question-circle"
                      />
                    </span>
                  </div>
                </span>
              </div>
              <div
                class="col-xs-10"
              >
                <textarea
                  class="form-control"
                  id="entity-description"
                />
              </div>
            </div>
            <div
              class="row margin-bottom"
            >
              <div
                class="col-xs-2"
              >
                <div
                  class="name-expression-label-div"
                >
                  Naming 
                  <span
                    class="domain-no-wrap"
                  >
                    Pattern
                    <div
                      class="overlay-trigger"
                    >
                      <span
                        class="label-help-target"
                      >
                        <span
                          class="label-help-icon fa fa-question-circle"
                        />
                      </span>
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="col-xs-10"
              >
                <input
                  class="form-control"
                  id="entity-nameExpression"
                  placeholder="Enter a naming pattern (e.g., DC-\${now:date}-\${genId})"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </form>
          <div
            class="row"
          >
            <div
              class="col-xs-2"
            >
              <span
                class="domain-no-wrap"
              >
                Category
              </span>
            </div>
            <div
              class="col-xs-10"
            >
              <div
                class="select-input-container form-group row"
              >
                <div
                  class="col-sm-9 col-xs-12"
                >
                  <div
                    class="select-input select-input--is-disabled css-3iigni-container"
                    id="selectinput-2"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-2-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                      role="log"
                    />
                    <div
                      aria-disabled="true"
                      class="select-input__control select-input__control--is-disabled css-1mgq1wa-control"
                    >
                      <div
                        class="select-input__value-container css-hlgwow"
                      >
                        <div
                          class="select-input__placeholder css-pxd85q-placeholder"
                          id="react-select-2-placeholder"
                        >
                          Loading...
                        </div>
                        <div
                          class="select-input__input-container css-1mkvw8y"
                          data-value=""
                        >
                          <input
                            aria-activedescendant=""
                            aria-autocomplete="list"
                            aria-describedby="react-select-2-placeholder"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="select-input__input"
                            disabled=""
                            id="react-select-2-input"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="select-input__indicators css-1wy0on6"
                      >
                        <span
                          class="select-input__indicator-separator css-894a34-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="select-input__indicator select-input__dropdown-indicator css-1xc3v61-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-xs-2"
            >
              Sample 
              <span
                class="domain-no-wrap"
              >
                Type
                <div
                  class="overlay-trigger"
                >
                  <span
                    class="label-help-target"
                  >
                    <span
                      class="label-help-icon fa fa-question-circle"
                    />
                  </span>
                </div>
              </span>
            </div>
            <div
              class="col-xs-10"
            >
              <div
                class="select-input-container form-group row"
              >
                <div
                  class="col-sm-9 col-xs-12"
                >
                  <div
                    class="select-input select-input--is-disabled css-3iigni-container"
                    id="selectinput-4"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-3-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                      role="log"
                    />
                    <div
                      aria-disabled="true"
                      class="select-input__control select-input__control--is-disabled css-1mgq1wa-control"
                    >
                      <div
                        class="select-input__value-container css-hlgwow"
                      >
                        <div
                          class="select-input__placeholder css-pxd85q-placeholder"
                          id="react-select-3-placeholder"
                        >
                          Loading...
                        </div>
                        <div
                          class="select-input__input-container css-1mkvw8y"
                          data-value=""
                        >
                          <input
                            aria-activedescendant=""
                            aria-autocomplete="list"
                            aria-describedby="react-select-3-placeholder"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="select-input__input"
                            disabled=""
                            id="react-select-3-input"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="select-input__indicators css-1wy0on6"
                      >
                        <span
                          class="select-input__indicator-separator css-894a34-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="select-input__indicator select-input__dropdown-indicator css-1xc3v61-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="panel panel-default domain-form-panel"
    >
      <div
        class="domain-panel-header domain-heading-collapsible domain-panel-header-collapsed"
        id="domain-header"
      >
        <div
          class="overlay-trigger"
        >
          <span
            class="label-help-target"
          >
            <span
              class="domain-panel-status-icon domain-panel-status-icon-blue"
            >
              <span
                class="fa fa-exclamation-circle"
              />
            </span>
          </span>
        </div>
        <span
          class="domain-panel-title"
        >
          Fields
        </span>
        <span
          class="pull-right"
        >
          <span
            class="fa fa-lg fa-chevron-right domain-form-expand-btn"
          />
        </span>
      </div>
      <div
        class="collapse panel-collapse"
      >
        <div
          class="panel-body domain-field-top-noBuffer"
        >
          <span
            class=""
          >
            <i
              aria-hidden="true"
              class="fa fa-spinner fa-pulse"
            />
             
            Loading...
          </span>
        </div>
      </div>
    </div>
    <div
      class="form-buttons"
    >
      <div
        class="form-buttons__left"
      >
        <button
          class="cancel-button btn btn-default"
          type="button"
        >
          Cancel
        </button>
      </div>
      <div
        class="form-buttons__right"
      >
        <button
          class="save-button btn btn-primary"
          type="button"
        >
          Save
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataClassDesigner initModel 1`] = `
<div>
  <div
    class="domain-designer"
  >
    <div
      class="panel panel-default domain-form-panel lk-border-theme-light"
    >
      <div
        class="domain-panel-header domain-heading-collapsible domain-panel-header-expanded labkey-page-nav"
        id="dataclass-properties-hdr"
      >
        <span
          class="domain-panel-status-icon"
        >
          <span
            class="fa fa-check-circle"
          />
        </span>
        <span
          class="domain-panel-title"
        >
          Data Class Properties
        </span>
        <span
          class="pull-right"
        >
          <span
            class="fa fa-lg fa-chevron-down domain-form-collapse-btn"
          />
        </span>
      </div>
      <div
        class="collapse panel-collapse in"
      >
        <div
          class="panel-body"
        >
          <div
            class="row margin-bottom"
          >
            <div
              class="col-xs-12"
            >
              <div
                class="row"
              >
                <div
                  class="col-xs-12"
                >
                  <a
                    class="domain-field-float-right"
                    href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createDataClass"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Learn more about designing data classes
                  </a>
                </div>
              </div>
            </div>
          </div>
          <form>
            <div
              class="row margin-bottom margin-top"
            >
              <div
                class="col-xs-2"
              >
                <span
                  class="domain-no-wrap"
                >
                  Name
                   *
                </span>
              </div>
              <div
                class="col-xs-10"
              >
                <input
                  class="form-control"
                  id="entity-name"
                  placeholder="Enter a name for this data class"
                  type="text"
                  value="test1"
                />
              </div>
            </div>
            <div
              class="row margin-bottom"
            >
              <div
                class="col-xs-2"
              >
                <span
                  class="domain-no-wrap"
                >
                  Description
                  <div
                    class="overlay-trigger"
                  >
                    <span
                      class="label-help-target"
                    >
                      <span
                        class="label-help-icon fa fa-question-circle"
                      />
                    </span>
                  </div>
                </span>
              </div>
              <div
                class="col-xs-10"
              >
                <textarea
                  class="form-control"
                  id="entity-description"
                >
                  with a description
                </textarea>
              </div>
            </div>
            <div
              class="row margin-bottom"
            >
              <div
                class="col-xs-2"
              >
                <div
                  class="name-expression-label-div"
                >
                  Naming 
                  <span
                    class="domain-no-wrap"
                  >
                    Pattern
                    <div
                      class="overlay-trigger"
                    >
                      <span
                        class="label-help-target"
                      >
                        <span
                          class="label-help-icon fa fa-question-circle"
                        />
                      </span>
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="col-xs-10"
              >
                <input
                  class="form-control"
                  id="entity-nameExpression"
                  placeholder="Enter a naming pattern (e.g., DC-\${now:date}-\${genId})"
                  type="text"
                  value="Source-\${genId}"
                />
              </div>
            </div>
          </form>
          <div
            class="row"
          >
            <div
              class="col-xs-2"
            >
              <span
                class="domain-no-wrap"
              >
                Category
              </span>
            </div>
            <div
              class="col-xs-10"
            >
              <div
                class="select-input-container form-group row"
              >
                <div
                  class="col-sm-9 col-xs-12"
                >
                  <div
                    class="select-input select-input--is-disabled css-3iigni-container"
                    id="selectinput-11"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-4-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                      role="log"
                    />
                    <div
                      aria-disabled="true"
                      class="select-input__control select-input__control--is-disabled css-1mgq1wa-control"
                    >
                      <div
                        class="select-input__value-container css-hlgwow"
                      >
                        <div
                          class="select-input__placeholder css-pxd85q-placeholder"
                          id="react-select-4-placeholder"
                        >
                          Loading...
                        </div>
                        <div
                          class="select-input__input-container css-1mkvw8y"
                          data-value=""
                        >
                          <input
                            aria-activedescendant=""
                            aria-autocomplete="list"
                            aria-describedby="react-select-4-placeholder"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="select-input__input"
                            disabled=""
                            id="react-select-4-input"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="select-input__indicators css-1wy0on6"
                      >
                        <span
                          class="select-input__indicator-separator css-894a34-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="select-input__indicator select-input__dropdown-indicator css-1xc3v61-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-xs-2"
            >
              Sample 
              <span
                class="domain-no-wrap"
              >
                Type
                <div
                  class="overlay-trigger"
                >
                  <span
                    class="label-help-target"
                  >
                    <span
                      class="label-help-icon fa fa-question-circle"
                    />
                  </span>
                </div>
              </span>
            </div>
            <div
              class="col-xs-10"
            >
              <div
                class="select-input-container form-group row"
              >
                <div
                  class="col-sm-9 col-xs-12"
                >
                  <div
                    class="select-input select-input--is-disabled css-3iigni-container"
                    id="selectinput-13"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-5-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                      role="log"
                    />
                    <div
                      aria-disabled="true"
                      class="select-input__control select-input__control--is-disabled css-1mgq1wa-control"
                    >
                      <div
                        class="select-input__value-container css-hlgwow"
                      >
                        <div
                          class="select-input__placeholder css-pxd85q-placeholder"
                          id="react-select-5-placeholder"
                        >
                          Loading...
                        </div>
                        <div
                          class="select-input__input-container css-1mkvw8y"
                          data-value=""
                        >
                          <input
                            aria-activedescendant=""
                            aria-autocomplete="list"
                            aria-describedby="react-select-5-placeholder"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="select-input__input"
                            disabled=""
                            id="react-select-5-input"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="select-input__indicators css-1wy0on6"
                      >
                        <span
                          class="select-input__indicator-separator css-894a34-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="select-input__indicator select-input__dropdown-indicator css-1xc3v61-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="panel panel-default domain-form-panel"
    >
      <div
        class="domain-panel-header domain-heading-collapsible domain-panel-header-collapsed"
        id="domainpropertiesrow-test1-hdr"
      >
        <span
          class="domain-panel-status-icon domain-panel-status-icon-green"
        >
          <span
            class="fa fa-check-circle"
          />
        </span>
        <span
          class="domain-panel-title"
        >
          Fields
        </span>
        <span
          class="pull-right"
        >
          <span
            class="fa fa-lg fa-chevron-right domain-form-expand-btn"
          />
        </span>
        <span
          class="domain-panel-header-fields-defined"
        >
          3 Fields Defined
        </span>
      </div>
      <div
        class="collapse panel-collapse"
      >
        <div
          class="panel-body domain-field-top-noBuffer"
        >
          <span
            class=""
          >
            <i
              aria-hidden="true"
              class="fa fa-spinner fa-pulse"
            />
             
            Loading...
          </span>
        </div>
      </div>
    </div>
    <div
      class="form-buttons"
    >
      <div
        class="form-buttons__left"
      >
        <button
          class="cancel-button btn btn-default"
          type="button"
        >
          Cancel
        </button>
      </div>
      <div
        class="form-buttons__right"
      >
        <button
          class="save-button btn btn-primary"
          type="button"
        >
          Save
        </button>
      </div>
    </div>
  </div>
</div>
`;
